@@ -18,7 +18,7 @@
    <parent>
       <groupId>org.eclipse.esmf</groupId>
       <artifactId>esmf-parent</artifactId>
-      <version>21</version>
+      <version>23</version>
    </parent>
 
    <artifactId>esmf-sdk-parent</artifactId>
@@ -63,7 +63,6 @@
       <module>core/esmf-aspect-model-urn</module>
       <module>core/esmf-aspect-model-validator</module>
       <module>core/esmf-aspect-static-meta-model-java</module>
-      <module>core/esmf-native-support</module>
       <module>core/esmf-test-aspect-models</module>
       <module>core/esmf-test-resources</module>
       <module>tools/esmf-aspect-model-maven-plugin</module>
@@ -76,11 +75,6 @@
       <skip.gpg.skip>true</skip.gpg.skip>
       <build-time-sources>${project.basedir}/src-buildtime</build-time-sources>
       <generated-sources>${project.basedir}/src-gen</generated-sources>
-      <relative-native-config-path>core/esmf-native-support/src-gen/main/resources/META-INF/native-image/${project.groupId}/esmf-native-support</relative-native-config-path>
-      <!-- The path to the native configs as it is reachable from the submodules -->
-      <native-config-path>${project.basedir}/../../${relative-native-config-path}</native-config-path>
-      <!-- Can be removed once configured in esmf-parent -->
-      <central-publishing-maven-plugin-version>0.8.0</central-publishing-maven-plugin-version>
    </properties>
 
    <dependencyManagement>
@@ -158,11 +152,6 @@
          </dependency>
          <dependency>
             <groupId>org.eclipse.esmf</groupId>
-            <artifactId>esmf-native-support</artifactId>
-            <version>${project.version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.eclipse.esmf</groupId>
             <artifactId>esmf-test-aspect-models</artifactId>
             <version>${project.version}</version>
          </dependency>
@@ -187,34 +176,9 @@
          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-dependencies</artifactId>
-            <version>${spring-boot-version}</version>
+            <version>${spring-boot.version}</version>
             <type>pom</type>
             <scope>import</scope>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-to-slf4j</artifactId>
-            <version>${log4j-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.twdata.maven</groupId>
-            <artifactId>mojo-executor</artifactId>
-            <version>${mojo-executor-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.graphper</groupId>
-            <artifactId>graph-support-core</artifactId>
-            <version>${graph-support-version}</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
@@ -239,38 +203,21 @@
    </dependencies>
 
    <build>
-      <!-- Can be removed once configured in esmf-parent -->
-      <pluginManagement>
-         <plugins>
-            <plugin>
-               <groupId>org.sonatype.central</groupId>
-               <artifactId>central-publishing-maven-plugin</artifactId>
-               <version>${central-publishing-maven-plugin-version}</version>
-            </plugin>
-         </plugins>
-      </pluginManagement>
-
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
             <executions>
                <execution>
-                  <id>esmf-enforce-graalvm</id>
+                  <id>esmf-enforce</id>
                   <goals>
                      <goal>enforce</goal>
                   </goals>
                   <configuration>
                      <rules>
-                        <requireProperty>
-                           <property>java.vendor.version</property>
-                           <message>Could not determine JDK vendor version (java.vendor.version property)</message>
-                           <regex>.*GraalVM.*</regex>
-                           <regexMessage>A GraalVM JDK is required to build this project</regexMessage>
-                        </requireProperty>
                         <requireJavaVersion>
-                           <version>21</version>
-                           <message>Java 21 or newer is required to build this project</message>
+                           <version>${java-target.version}</version>
+                           <message>Java ${java-target.version} or newer is required to build this project</message>
                         </requireJavaVersion>
                      </rules>
                   </configuration>
@@ -294,19 +241,24 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
             <inherited>false</inherited>
+         </plugin>
+
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <filesets>
-                  <fileset>
-                     <directory>${relative-native-config-path}</directory>
-                  </fileset>
-               </filesets>
+               <properties>
+                  <configurationParameters>
+                     junit.jupiter.execution.parallel.enabled = true
+                  </configurationParameters>
+               </properties>
+               <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
             </configuration>
          </plugin>
 
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-deploy-plugin</artifactId>
-            <version>${maven-deploy-plugin-version}</version>
             <configuration>
                <skip>true</skip>
             </configuration>
@@ -325,35 +277,4 @@
          </plugin>
       </plugins>
    </build>
-
-   <profiles>
-      <profile>
-         <id>native</id>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <configuration>
-                     <skip>false</skip>
-                     <argLine>-agentlib:native-image-agent=config-merge-dir=${native-config-path}</argLine>
-                  </configuration>
-               </plugin>
-
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-clean-plugin</artifactId>
-                  <inherited>false</inherited>
-                  <configuration>
-                     <filesets>
-                        <fileset>
-                           <directory>${relative-native-config-path}</directory>
-                        </fileset>
-                     </filesets>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
 </project>
